src/objects/PartnerAffiliate__c.object
<CustomObject><fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Nature_of_Service_Provided__c</fullName>
        <label>Nature of Service Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Title Services</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Settlement Services</fullName>
                </value>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Appraisal Services</fullName>
                </value>
                <value>
                    <fullName>Real Estate Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Other_Service_Name__c</fullName>
        <label>Other Service Name</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Related_Partner__c</fullName>
        <label>Related Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Affiliates</relationshipLabel>
        <relationshipName>Partner_Affiliates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields><fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Zip__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>PartnerAffiliate</label><nameField>
        <label>Affiliated Entity Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Partner Affiliates</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All_Partner_Affiliates</fullName>
        <columns>NAME</columns>
        <columns>Related_Partner__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Nature_of_Service_Provided__c</columns>
        <columns>Other_Service_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Partner Affiliates</label>
    </listViews><validationRules>
        <fullName>Other_is_must_for_other_service</fullName>
        <active>true</active>
        <description>Must fill 'Other Service Name' field if 'Other' is selected as picklist option for Nature of Service Provided field.</description>
        <errorConditionFormula>INCLUDES( Nature_of_Service_Provided__c ,'Other') &amp;&amp;  ISBLANK( Other_Service_Name__c )</errorConditionFormula>
        <errorDisplayField>Other_Service_Name__c</errorDisplayField>
        <errorMessage>Must fill 'Other Service Name' field if 'Other' is selected as picklist option for Nature of Service Provided field.</errorMessage>
    </validationRules></CustomObject>